# xkeyboard-config

./: .gitlab-ci.yml  .pre-commit-config.yaml  .triage-policies.yml  CONTRIBUTING.md  ChangeLog.md  NEWS  README.md  RELEASING.md  VERSIONING.md  meson.build  meson_options.txt  towncrier.toml
.gitlab-ci/: evdev.in  generate-evdev-keycodes.py  generate-evdev-keysyms.py  inet.in  yaml-to-junit-xml.py
.gitlab/issue_templates/: Bug.md  Default.md  Feature Request.md
.gitlab/merge_request_templates/: Default.md
changes/: README.md
changes/layouts/: +add-diktor-layout.feature.md  +add-ruintl-layout.feature.md  +add-th-manoonchai-layout.feature.md  +fix-faroese-numpad-comma-layout.bugfix.md  +got-alt.feature.md  +iso-us-mac.feature.md  +ru(typo)-bar-symbol.feature.md  +update-3l-layout.feature.md  +update-colemak-dh-capslock.breaking.md  +winkeysenhanced.feature.md  442.breaking.md  478.bugfix.md  512.bugfix.md  534.bugfix.md  534.feature.md  745.breaking.md  pk-pak-urdu-phonetic
changes/misc/: +ctrl-alt-type.bugfix.md  +hyper-on-mod3.breaking.md  +inet-update.feature.md  +map_zankaku_hankaku_to_touchpad_toggle.breaking.md  +updated-keycodes.feature.md
changes/models/: +fix-kynesis-geometry.bugfix  292.feature
changes/options/: +add-caps-digits_row_independent_lock.feature.md  +add-lv3_caps_switch_capslock_with_ctrl.feature.md  +hyper-mod3.feature.md  +shift:breaks_caps.bugfix.md  121.feature.md  306.feature.md  440.breaking  447.bugfix.md  474.feature.md  74.bugfix.md
compat/: iso9995  misc
docs/: README.config  README.enhancing
geometry/: macintosh  pc
keycodes/: evdev
man/: man.xsl
po/: ar.po  bg.po  ca.po  cs.po  de.po  es.po  fa.po  fi.po  fr.po  he.po  id.po  ka.po  kab.po  ko.po  meson.build  nl.po  pl.po  pt.po  ro.po  ru.po  sl.po  sq.po  sr.po  sv.po  tr.po  uk.po  xkeyboard-config.pot  zh_CN.po
rules/: 0001-lists.part  0002-base.lists.part  0004-evdev.m_k.part  0009-m_g.part  0011-mlv_s.part  0013-ml_s.part  0015-ml1_s.part  0026-evdev.m_s.part  0035-m_t.part  0036-lo_s.part  0037-l1o_s.part  0038-l2o_s.part  0039-l3o_s.part  0040-l4o_s.part  0042-o_s.part  0042-option_symbols.part  0043-option_compat.part  0160-modellayout1_symbols.part  0180-modellayout2_symbols.part  0200-modellayout3_symbols.part  0220-modellayout4_symbols.part  0340-modellayout1_compat.part  0341-modellayout2_compat.part  0342-modellayout3_compat.part  0343-modellayout4_compat.part  base.extras.xml  base.xml  generate-options-symbols.py  merge.py  meson.build  xfree98
rules/compat/: 0041-o_s.part  0300-layout2variant2_compat.part  0310-layout3variant3_compat.part  0320-layout4variant4_compat.part  layoutsMapping.lst  map-variants.py  variantsMapping-vendors.lst  variantsMapping.lst
scripts/: registry.py  symbols-tree.py
symbols/: af  al  altwin  ancient  ara  au  az  bd  be  bqn  br  bt  by  ca  capslock  ch  cm  ctrl  cz  de  dk  ee  es  esperanto  et  eu  fo  fr  gb  ge  gh  gr  group  hu  hyper  id  ie  il  in  inet  (+37 more)
symbols/macintosh_vndr/: fr  is  jp  us
symbols/nokia_vndr/: su-8w
symbols/sun_vndr/: se
tests/: genLists4Comparison.sh  genLists4Comparizon.sh  reg2ll.xsl  test_compat_rules.py  test_regressions.py  test_rules_xml.py  test_xkb_symbols.py  verify-group-names.sh
tests/xkbcommon/: __init__.py
types/: basic  cancel  caps  extra  iso9995  level5  mousekeys  numpad  pc
